parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ANDVETOR
    CALL
    CAT
    DEDENT
    DIFERENTE
    FUNCTION
    IDENT
    IGUALAT
    INF
    LINHA
    MAIOR
    MAIORIGUAL
    MENOR
    MENORIGUAL
    MODULO
    NA
    NANA
    NA_CHARACTER_
    NA_COMPLEX
    NA_INTEGER_
    NA_REAL_
    NOTLOGICO
    NULL
    OR
    ORVETOR
    PASS
    SEQUENCIAL
    XOR

Grammar

Rule 0     S' -> program
Rule 1     program -> funcdecl
Rule 2     program -> funcdecl program
Rule 3     funcdecl -> signature body
Rule 4     signature -> ID ID LPAREN sigparams RPAREN
Rule 5     signature -> ID ID LPAREN RPAREN
Rule 6     sigparams -> ID ID
Rule 7     sigparams -> ID ID COMMA sigparams
Rule 8     body -> LCHAV stms RCHAV
Rule 9     body -> LCHAV RCHAV
Rule 10    stms -> stm
Rule 11    stms -> stm stms
Rule 12    stm -> exp PV
Rule 13    stm -> WHILE LPAREN exp RPAREN body
Rule 14    stm -> RETURN exp PV
Rule 15    stm -> FOR LPAREN ID IN exp RPAREN body
Rule 16    stm -> REPEAT body WHILE LPAREN exp RPAREN PV
Rule 17    stm -> BREAK PV
Rule 18    stm -> NEXT PV
Rule 19    stm -> SWITCH LPAREN exp COMMA cases RPAREN
Rule 20    cases -> exp IGUAL body
Rule 21    cases -> exp IGUAL body cases
Rule 22    cases -> exp IGUAL stm
Rule 23    cases -> exp IGUAL stm cases
Rule 24    stm -> IF LPAREN exp RPAREN body ELSE body
Rule 25    exp -> exp IGUAL exp1
Rule 26    exp -> exp1
Rule 27    exp1 -> exp1 SOMA exp2
Rule 28    exp1 -> exp2
Rule 29    exp1 -> exp1 SUBTRAIR exp2
Rule 30    exp2 -> exp2 VEZES exp3
Rule 31    exp2 -> exp3
Rule 32    exp2 -> exp2 DIVIDIR exp3
Rule 33    exp3 -> exp4 POT exp3
Rule 34    exp3 -> exp4
Rule 35    exp4 -> call
Rule 36    exp4 -> NUMBER_INT
Rule 37    exp4 -> NUMBER_FLOAT
Rule 38    exp4 -> ID
Rule 39    exp4 -> TRUE
Rule 40    exp4 -> FALSE
Rule 41    call -> ID LPAREN params RPAREN
Rule 42    call -> ID LPAREN RPAREN
Rule 43    params -> exp COMMA params
Rule 44    params -> exp

Terminals, with rules where they appear

AND                  : 
ANDVETOR             : 
BREAK                : 17
CALL                 : 
CAT                  : 
COMMA                : 7 19 43
DEDENT               : 
DIFERENTE            : 
DIVIDIR              : 32
ELSE                 : 24
FALSE                : 40
FOR                  : 15
FUNCTION             : 
ID                   : 4 4 5 5 6 6 7 7 15 38 41 42
IDENT                : 
IF                   : 24
IGUAL                : 20 21 22 23 25
IGUALAT              : 
IN                   : 15
INF                  : 
LCHAV                : 8 9
LINHA                : 
LPAREN               : 4 5 13 15 16 19 24 41 42
MAIOR                : 
MAIORIGUAL           : 
MENOR                : 
MENORIGUAL           : 
MODULO               : 
NA                   : 
NANA                 : 
NA_CHARACTER_        : 
NA_COMPLEX           : 
NA_INTEGER_          : 
NA_REAL_             : 
NEXT                 : 18
NOTLOGICO            : 
NULL                 : 
NUMBER_FLOAT         : 37
NUMBER_INT           : 36
OR                   : 
ORVETOR              : 
PASS                 : 
POT                  : 33
PV                   : 12 14 16 17 18
RCHAV                : 8 9
REPEAT               : 16
RETURN               : 14
RPAREN               : 4 5 13 15 16 19 24 41 42
SEQUENCIAL           : 
SOMA                 : 27
SUBTRAIR             : 29
SWITCH               : 19
TRUE                 : 39
VEZES                : 30
WHILE                : 13 16
XOR                  : 
error                : 

Nonterminals, with rules where they appear

body                 : 3 13 15 16 20 21 24 24
call                 : 35
cases                : 19 21 23
exp                  : 12 13 14 15 16 19 20 21 22 23 24 25 43 44
exp1                 : 25 26 27 29
exp2                 : 27 28 29 30 32
exp3                 : 30 31 32 33
exp4                 : 33 34
funcdecl             : 1 2
params               : 41 43
program              : 2 0
signature            : 3
sigparams            : 4 7
stm                  : 10 11 22 23
stms                 : 8 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) funcdecl -> . signature body
    (4) signature -> . ID ID LPAREN sigparams RPAREN
    (5) signature -> . ID ID LPAREN RPAREN

    ID              shift and go to state 4

    program                        shift and go to state 1
    funcdecl                       shift and go to state 2
    signature                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> funcdecl .
    (2) program -> funcdecl . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) funcdecl -> . signature body
    (4) signature -> . ID ID LPAREN sigparams RPAREN
    (5) signature -> . ID ID LPAREN RPAREN

    $end            reduce using rule 1 (program -> funcdecl .)
    ID              shift and go to state 4

    funcdecl                       shift and go to state 2
    program                        shift and go to state 5
    signature                      shift and go to state 3

state 3

    (3) funcdecl -> signature . body
    (8) body -> . LCHAV stms RCHAV
    (9) body -> . LCHAV RCHAV

    LCHAV           shift and go to state 7

    body                           shift and go to state 6

state 4

    (4) signature -> ID . ID LPAREN sigparams RPAREN
    (5) signature -> ID . ID LPAREN RPAREN

    ID              shift and go to state 8


state 5

    (2) program -> funcdecl program .

    $end            reduce using rule 2 (program -> funcdecl program .)


state 6

    (3) funcdecl -> signature body .

    ID              reduce using rule 3 (funcdecl -> signature body .)
    $end            reduce using rule 3 (funcdecl -> signature body .)


state 7

    (8) body -> LCHAV . stms RCHAV
    (9) body -> LCHAV . RCHAV
    (10) stms -> . stm
    (11) stms -> . stm stms
    (12) stm -> . exp PV
    (13) stm -> . WHILE LPAREN exp RPAREN body
    (14) stm -> . RETURN exp PV
    (15) stm -> . FOR LPAREN ID IN exp RPAREN body
    (16) stm -> . REPEAT body WHILE LPAREN exp RPAREN PV
    (17) stm -> . BREAK PV
    (18) stm -> . NEXT PV
    (19) stm -> . SWITCH LPAREN exp COMMA cases RPAREN
    (24) stm -> . IF LPAREN exp RPAREN body ELSE body
    (25) exp -> . exp IGUAL exp1
    (26) exp -> . exp1
    (27) exp1 -> . exp1 SOMA exp2
    (28) exp1 -> . exp2
    (29) exp1 -> . exp1 SUBTRAIR exp2
    (30) exp2 -> . exp2 VEZES exp3
    (31) exp2 -> . exp3
    (32) exp2 -> . exp2 DIVIDIR exp3
    (33) exp3 -> . exp4 POT exp3
    (34) exp3 -> . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER_INT
    (37) exp4 -> . NUMBER_FLOAT
    (38) exp4 -> . ID
    (39) exp4 -> . TRUE
    (40) exp4 -> . FALSE
    (41) call -> . ID LPAREN params RPAREN
    (42) call -> . ID LPAREN RPAREN

    RCHAV           shift and go to state 10
    WHILE           shift and go to state 13
    RETURN          shift and go to state 14
    FOR             shift and go to state 15
    REPEAT          shift and go to state 17
    BREAK           shift and go to state 18
    NEXT            shift and go to state 19
    SWITCH          shift and go to state 20
    IF              shift and go to state 21
    NUMBER_INT      shift and go to state 27
    NUMBER_FLOAT    shift and go to state 28
    ID              shift and go to state 16
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30

    stms                           shift and go to state 9
    stm                            shift and go to state 11
    exp                            shift and go to state 12
    exp1                           shift and go to state 22
    exp2                           shift and go to state 23
    exp3                           shift and go to state 24
    exp4                           shift and go to state 25
    call                           shift and go to state 26

state 8

    (4) signature -> ID ID . LPAREN sigparams RPAREN
    (5) signature -> ID ID . LPAREN RPAREN

    LPAREN          shift and go to state 31


state 9

    (8) body -> LCHAV stms . RCHAV

    RCHAV           shift and go to state 32


state 10

    (9) body -> LCHAV RCHAV .

    ID              reduce using rule 9 (body -> LCHAV RCHAV .)
    $end            reduce using rule 9 (body -> LCHAV RCHAV .)
    WHILE           reduce using rule 9 (body -> LCHAV RCHAV .)
    RETURN          reduce using rule 9 (body -> LCHAV RCHAV .)
    FOR             reduce using rule 9 (body -> LCHAV RCHAV .)
    REPEAT          reduce using rule 9 (body -> LCHAV RCHAV .)
    BREAK           reduce using rule 9 (body -> LCHAV RCHAV .)
    NEXT            reduce using rule 9 (body -> LCHAV RCHAV .)
    SWITCH          reduce using rule 9 (body -> LCHAV RCHAV .)
    IF              reduce using rule 9 (body -> LCHAV RCHAV .)
    NUMBER_INT      reduce using rule 9 (body -> LCHAV RCHAV .)
    NUMBER_FLOAT    reduce using rule 9 (body -> LCHAV RCHAV .)
    TRUE            reduce using rule 9 (body -> LCHAV RCHAV .)
    FALSE           reduce using rule 9 (body -> LCHAV RCHAV .)
    RCHAV           reduce using rule 9 (body -> LCHAV RCHAV .)
    RPAREN          reduce using rule 9 (body -> LCHAV RCHAV .)
    ELSE            reduce using rule 9 (body -> LCHAV RCHAV .)


state 11

    (10) stms -> stm .
    (11) stms -> stm . stms
    (10) stms -> . stm
    (11) stms -> . stm stms
    (12) stm -> . exp PV
    (13) stm -> . WHILE LPAREN exp RPAREN body
    (14) stm -> . RETURN exp PV
    (15) stm -> . FOR LPAREN ID IN exp RPAREN body
    (16) stm -> . REPEAT body WHILE LPAREN exp RPAREN PV
    (17) stm -> . BREAK PV
    (18) stm -> . NEXT PV
    (19) stm -> . SWITCH LPAREN exp COMMA cases RPAREN
    (24) stm -> . IF LPAREN exp RPAREN body ELSE body
    (25) exp -> . exp IGUAL exp1
    (26) exp -> . exp1
    (27) exp1 -> . exp1 SOMA exp2
    (28) exp1 -> . exp2
    (29) exp1 -> . exp1 SUBTRAIR exp2
    (30) exp2 -> . exp2 VEZES exp3
    (31) exp2 -> . exp3
    (32) exp2 -> . exp2 DIVIDIR exp3
    (33) exp3 -> . exp4 POT exp3
    (34) exp3 -> . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER_INT
    (37) exp4 -> . NUMBER_FLOAT
    (38) exp4 -> . ID
    (39) exp4 -> . TRUE
    (40) exp4 -> . FALSE
    (41) call -> . ID LPAREN params RPAREN
    (42) call -> . ID LPAREN RPAREN

    RCHAV           reduce using rule 10 (stms -> stm .)
    WHILE           shift and go to state 13
    RETURN          shift and go to state 14
    FOR             shift and go to state 15
    REPEAT          shift and go to state 17
    BREAK           shift and go to state 18
    NEXT            shift and go to state 19
    SWITCH          shift and go to state 20
    IF              shift and go to state 21
    NUMBER_INT      shift and go to state 27
    NUMBER_FLOAT    shift and go to state 28
    ID              shift and go to state 16
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30

    stm                            shift and go to state 11
    stms                           shift and go to state 33
    exp                            shift and go to state 12
    exp1                           shift and go to state 22
    exp2                           shift and go to state 23
    exp3                           shift and go to state 24
    exp4                           shift and go to state 25
    call                           shift and go to state 26

state 12

    (12) stm -> exp . PV
    (25) exp -> exp . IGUAL exp1

    PV              shift and go to state 34
    IGUAL           shift and go to state 35


state 13

    (13) stm -> WHILE . LPAREN exp RPAREN body

    LPAREN          shift and go to state 36


state 14

    (14) stm -> RETURN . exp PV
    (25) exp -> . exp IGUAL exp1
    (26) exp -> . exp1
    (27) exp1 -> . exp1 SOMA exp2
    (28) exp1 -> . exp2
    (29) exp1 -> . exp1 SUBTRAIR exp2
    (30) exp2 -> . exp2 VEZES exp3
    (31) exp2 -> . exp3
    (32) exp2 -> . exp2 DIVIDIR exp3
    (33) exp3 -> . exp4 POT exp3
    (34) exp3 -> . exp4
    (35) exp4 -> . call
    (36) exp4 -> . NUMBER_INT
    (37) exp4 -> . NUMBER_FLOAT
    (38) exp4 -> . ID
    (39) exp4 -> . TRUE
    (40) exp4 -> . FALSE
    (41) call -> . ID LPAREN params RPAREN
    (42) call -> . ID LPAREN RPAREN

    NUMBER_INT      shift and go to state 27
    NUMBER_FLOAT    shift and go to state 28
    ID              shift and go to state 16
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30

    exp                            shift and go to state 37
    exp1                           shift and go to state 22
    exp2                           shift and go to state 23
    exp3                           shift and go to state 24
    exp4                           shift and go to state 25
    call                           shift and go to state 26

state 15

    (15) stm -> FOR . LPAREN ID IN exp RPAREN body

    LPAREN          shift and go to state 38


state 16

    (38) exp4 -> ID .
    (41) call -> ID . LPAREN params RPAREN
    (42) call -> ID . LPAREN RPAREN

    POT             reduce using rule 38 (exp4 -> ID .)
    VEZES           reduce using rule 38 (exp4 -> ID .)
    DIVIDIR         reduce using rule 38 (exp4 -> ID .)
    SOMA            reduce using rule 38 (exp4 -> ID .)
    SUBTRAIR        reduce using rule 38 (exp4 -> ID .)
    PV              reduce using rule 38 (exp4 -> ID .)
    IGUAL           reduce using rule 38 (exp4 -> ID .)
    RPAREN          reduce using rule 38 (exp4 -> ID .)
    COMMA           reduce using rule 38 (exp4 -> ID .)
    LPAREN          shift and go to state 39


state 17

    (16) stm -> REPEAT . body WHILE LPAREN exp RPAREN PV
    (8) body -> . LCHAV stms RCHAV
    (9) body -> . LCHAV RCHAV

    LCHAV           shift and go to state 7

    body                           shift and go to state 40

state 18

    (17) stm -> BREAK . PV

    PV              shift and go to state 41


state 19

    (18) stm -> NEXT . PV

    PV              shift and go to state 42


state 20

    (19) stm -> SWITCH . LPAREN exp COMMA cases RPAREN

    LPAREN          shift and go to state 43


state 21

    (24) stm -> IF . LPAREN exp RPAREN body ELSE body

    LPAREN          shift and go to state 44


state 22

    (26) exp -> exp1 .
    (27) exp1 -> exp1 . SOMA exp2
    (29) exp1 -> exp1 . SUBTRAIR exp2

    PV              reduce using rule 26 (exp -> exp1 .)
    IGUAL           reduce using rule 26 (exp -> exp1 .)
    RPAREN          reduce using rule 26 (exp -> exp1 .)
    COMMA           reduce using rule 26 (exp -> exp1 .)
    SOMA            shift and go to state 45
    SUBTRAIR        shift and go to state 46


state 23

    (28) exp1 -> exp2 .
    (30) exp2 -> exp2 . VEZES exp3
    (32) exp2 -> exp2 . DIVIDIR exp3

    SOMA            reduce using rule 28 (exp1 -> exp2 .)
    SUBTRAIR        reduce using rule 28 (exp1 -> exp2 .)
    PV              reduce using rule 28 (exp1 -> exp2 .)
    IGUAL           reduce using rule 28 (exp1 -> exp2 .)
    RPAREN          reduce using rule 28 (exp1 -> exp2 .)
    COMMA           reduce using rule 28 (exp1 -> exp2 .)
    VEZES           shift and go to state 47
    DIVIDIR         shift and go to state 48


state 24

    (31) exp2 -> exp3 .

    VEZES           reduce using rule 31 (exp2 -> exp3 .)
    DIVIDIR         reduce using rule 31 (exp2 -> exp3 .)
    SOMA            reduce using rule 31 (exp2 -> exp3 .)
    SUBTRAIR        reduce using rule 31 (exp2 -> exp3 .)
    PV              reduce using rule 31 (exp2 -> exp3 .)
    IGUAL           reduce using rule 31 (exp2 -> exp3 .)
    RPAREN          reduce using rule 31 (exp2 -> exp3 .)
    COMMA           reduce using rule 31 (exp2 -> exp3 .)


state 25

    (33) exp3 -> exp4 . POT exp3
    (34) exp3 -> exp4 .

    POT             shift and go to state 49
    VEZES           reduce using rule 34 (exp3 -> exp4 .)
    DIVIDIR         reduce using rule 34 (exp3 -> exp4 .)
    SOMA            reduce using rule 34 (exp3 -> exp4 .)
    SUBTRAIR        reduce using rule 34 (exp3 -> exp4 .)
    PV              reduce using rule 34 (exp3 -> exp4 .)
    IGUAL           reduce using rule 34 (exp3 -> exp4 .)
    RPAREN          reduce using rule 34 (exp3 -> exp4 .)
    COMMA           reduce using rule 34 (exp3 -> exp4 .)


state 26

    (35) exp4 -> call .

    POT             reduce using rule 35 (exp4 -> call .)
    VEZES           reduce using rule 35 (exp4 -> call .)
    DIVIDIR         reduce using rule 35 (exp4 -> call .)
    SOMA            reduce using rule 35 (exp4 -> call .)
    SUBTRAIR        reduce using rule 35 (exp4 -> call .)
    PV              reduce using rule 35 (exp4 -> call .)
    IGUAL           reduce using rule 35 (exp4 -> call .)
    RPAREN          reduce using rule 35 (exp4 -> call .)
    COMMA           reduce using rule 35 (exp4 -> call .)


state 27

    (36) exp4 -> NUMBER_INT .

    POT             reduce using rule 36 (exp4 -> NUMBER_INT .)
    VEZES           reduce using rule 36 (exp4 -> NUMBER_INT .)
    DIVIDIR         reduce using rule 36 (exp4 -> NUMBER_INT .)
    SOMA            reduce using rule 36 (exp4 -> NUMBER_INT .)
    SUBTRAIR        reduce using rule 36 (exp4 -> NUMBER_INT .)
    PV              reduce using rule 36 (exp4 -> NUMBER_INT .)
    IGUAL           reduce using rule 36 (exp4 -> NUMBER_INT .)
    RPAREN          reduce using rule 36 (exp4 -> NUMBER_INT .)
    COMMA           reduce using rule 36 (exp4 -> NUMBER_INT .)


state 28

    (37) exp4 -> NUMBER_FLOAT .

    POT             reduce using rule 37 (exp4 -> NUMBER_FLOAT .)
    VEZES           reduce using rule 37 (exp4 -> NUMBER_FLOAT .)
    DIVIDIR         reduce using rule 37 (exp4 -> NUMBER_FLOAT .)
    SOMA            reduce using rule 37 (exp4 -> NUMBER_FLOAT .)
    SUBTRAIR        reduce using rule 37 (exp4 -> NUMBER_FLOAT .)
    PV              reduce using rule 37 (exp4 -> NUMBER_FLOAT .)
    IGUAL           reduce using rule 37 (exp4 -> NUMBER_FLOAT .)
    RPAREN          reduce using rule 37 (exp4 -> NUMBER_FLOAT .)
    COMMA           reduce using rule 37 (exp4 -> NUMBER_FLOAT .)


state 29

    (39) exp4 -> TRUE .

    POT             reduce using rule 39 (exp4 -> TRUE .)
    VEZES           reduce using rule 39 (exp4 -> TRUE .)
    DIVIDIR         reduce using rule 39 (exp4 -> TRUE .)
    SOMA            reduce using rule 39 (exp4 -> TRUE .)
    SUBTRAIR        reduce using rule 39 (exp4 -> TRUE .)
    PV              reduce using rule 39 (exp4 -> TRUE .)
    IGUAL           reduce using rule 39 (exp4 -> TRUE .)
    RPAREN          reduce using rule 39 (exp4 -> TRUE .)
    COMMA           reduce using rule 39 (exp4 -> TRUE .)


state 30

    (40) exp4 -> FALSE .

    POT             reduce using rule 40 (exp4 -> FALSE .)
    VEZES           reduce using rule 40 (exp4 -> FALSE .)
    DIVIDIR         reduce using rule 40 (exp4 -> FALSE .)
    SOMA            reduce using rule 40 (exp4 -> FALSE .)
    SUBTRAIR        reduce using rule 40 (exp4 -> FALSE .)
    PV              reduce using rule 40 (exp4 -> FALSE .)
    IGUAL           reduce using rule 40 (exp4 -> FALSE .)
    RPAREN          reduce using rule 40 (exp4 -> FALSE .)
    COMMA           reduce using rule 40 (exp4 -> FALSE .)


state 31

    (4) signature -> ID ID LPAREN . sigparams RPAREN
    (5) signature -> ID ID LPAREN . RPAREN
    (6) sigparams -> . ID ID
    (7) sigparams -> . ID ID COMMA sigparams

    RPAREN          shift and go to state 52
    ID              shift and go to state 50

    sigparams                      shift and go to state 51

state 32

    (8) body -> LCHAV stms RCHAV .

    ID              reduce using rule 8 (body -> LCHAV stms RCHAV .)
    $end            reduce using rule 8 (body -> LCHAV stms RCHAV .)
    WHILE           reduce using rule 8 (body -> LCHAV stms RCHAV .)
    RETURN          reduce using rule 8 (body -> LCHAV stms RCHAV .)
    FOR             reduce using rule 8 (body -> LCHAV stms RCHAV .)
    REPEAT          reduce using rule 8 (body -> LCHAV stms RCHAV .)
    BREAK           reduce using rule 8 (body -> LCHAV stms RCHAV .)
    NEXT            reduce using rule 8 (body -> LCHAV stms RCHAV .)
    SWITCH          reduce using rule 8 (body -> LCHAV stms RCHAV .)
    IF              reduce using rule 8 (body -> LCHAV stms RCHAV .)
    NUMBER_INT      reduce using rule 8 (body -> LCHAV stms RCHAV .)
    NUMBER_FLOAT    reduce using rule 8 (body -> LCHAV stms RCHAV .)
    TRUE            reduce using rule 8 (body -> LCHAV stms RCHAV .)
    FALSE           reduce using rule 8 (body -> LCHAV stms RCHAV .)
    RCHAV           reduce using rule 8 (body -> LCHAV stms RCHAV .)
    RPAREN          reduce using rule 8 (body -> LCHAV stms RCHAV .)
    ELSE            reduce using rule 8 (body -> LCHAV stms RCHAV .)


state 33

    (11) stms -> stm stms .

    RCHAV           reduce using rule 11 (stms -> stm stms .)


state 34

    (12) stm -> exp PV .
